pg-slave-pg-02.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-slave
  namespace: pg-sql-01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-slave
  template:
    metadata:
      labels:
        app: postgres-slave
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc-slave
