pg-sql-01.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-statefulset
  namespace: pg-sql-01
spec:
  serviceName: postgres-statefulset
  replicas: 2
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage-01
              mountPath: /var/lib/postgresql/data
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage-02
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage-01
          persistentVolumeClaim:
            claimName: postgres-pvc-01
