master.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-master
  namespace: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-master
  template:
    metadata:
      labels:
        app: postgres-master
    spec:
      containers:
        - name: postgres-master
          image: bitnami/postgresql:16
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "2Gi"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /bitnami/postgresql
              name: postgresdata
      volumes:
        - name: postgresdata
          persistentVolumeClaim:
            claimName: postgres-master-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-master-svc
  namespace: postgres
  labels:
    app: postgres-master
spec:
  type: NodePort
  ports:
    - port: 5432
  selector:
    app: postgres-master
