pg-master-02.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-sfs-02
  namespace: pg-sql-02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-02
  template:
    metadata:
      labels:
        app: postgres-02
    spec:
      containers:
        - name: postgres-02
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc-master-02
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service-02
  namespace: pg-sql-02
spec:
  selector:
    app: postgres-02
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
