pg-master.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-master
  namespace: pg-sql-01
spec:
  serviceName: postgres-master
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc-master
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-master
  namespace: pg-sql-01
spec:
  selector:
    app: postgres
    role: master
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
