pg-slave.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pg-1
  namespace: pgsql01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
      role: repmgr
      node: pg-1
  template:
    metadata:
      labels:
        app: postgres
        role: repmgr
        node: pg-1
    spec:
      containers:
        - name: postgres
          image: bitnami/postgresql:14
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: pg-1-data
              mountPath: /bitnami/postgresql
      volumes:
        - name: pg-1-data
          persistentVolumeClaim:
            claimName: postgres-storage-pvc-slave-0
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service-slave
  namespace: pgsql01
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
