pg-svc-slave.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service-slave
  namespace: pg-sql-01
spec:
  selector:
    app: postgres-slave
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
