pg-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: create-pg-sql
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
