postgresdeploy.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-sfs
  namespace: pg-sql-01
spec:
  replicas: 1
  serviceName: postgres-service
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
  volumeClaimTemplates:
    - metadata:
        name: postgres-storage-01
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: manual
        resources:
          requests:
            storage: 10Gi
    - metadata:
        name: postgres-storage-02
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: manual
        resources:
          requests:
            storage: 10Gi
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: pg-sql-01
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
