postgrestest.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-slave
  namespace: create-pg-sql
spec:
  serviceName: postgres-slave
  replicas: 2
  selector:
    matchLabels:
      app: postgres-slave
  template:
    metadata:
      labels:
        app: postgres-slave
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-slave-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-slave-service
  namespace: create-pg-sql
spec:
  selector:
    app: postgres-slave
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
