slave.yml
# Slave
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-slave
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-slave
  template:
    metadata:
      labels:
        app: postgres-slave
    spec:
      containers:
        - name: postgres-slave
          image: bitnami/postgresql:16
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /bitnami/postgresql
              name: postgresdata
      volumes:
        - name: postgresdata
          persistentVolumeClaim:
            claimName: postgres-slave-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-slave-svc
  namespace: postgres
  labels:
    app: postgres-slave
spec:
  type: NodePort
  ports:
    - port: 5432
  selector:
    app: postgres-slave
