wordpress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-deploy
  namespace: create-pg-sql
  labels:
    app: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
        - name: wordpress
          image: wordpress:6.2.1-apache
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-svc
  namespace: create-pg-sql
  labels:
    app: wordpress
spec:
  selector:
    app: wordpress
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: LoadBalancer
